--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Jan Laudahn
-email:
+email: jan@laudart.de
 description: >- # this means to ignore newlines until "baseurl:"
   This should contain information about my new jekyll based site.
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -27,6 +27,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: cooling75
 github_username:  cooling75
 
+assets_path: "/assets"
 # Build settings
 theme: minima
 plugins:
