--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github_username:  cooling75
 
 assets_path: "/assets"
 # Build settings
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
 
