--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,9 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: cooling75
 github_username:  cooling75
 
-assets_path: "/assets"
+# assets_path: "/assets"
 # Build settings
-theme: jekyll-theme-minimal
+theme: minima
 plugins:
   - jekyll-feed
 
