--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,12 @@ github_username:  cooling75
 
 # assets_path: "/assets"
 # Build settings
-theme: minima
+# theme: minima
+# plugins:
+#   - jekyll-feed
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
-  - jekyll-feed
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 # Exclude from processing.
 # The following items will not be processed, by default.
