--- a/_config.yml
+++ b/_config.yml
@@ -30,12 +30,13 @@ github_username:  cooling75
 
 # assets_path: "/assets"
 # Build settings
-# theme: minima
+theme: minima
 # plugins:
-#   - jekyll-feed
+#   
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
   - jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
