--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ github_username:  cooling75
 
 # assets_path: "/assets"
 # Build settings
-theme: minima
+# theme: minima
 # plugins:
 #   
 remote_theme: pages-themes/hacker@v0.2.0
